crates/ddlog-syntax/tests/validation/fail/input_function.dl
// kind:item validate:true pass:false ignore:false
extern input function foo() {}
